## PLUXML x.x (sortie : xx/xx/xxxx) ##

[+] [admin menu] Les id de liste pour chaque menu sont fixes : url basename (style compatible multilingue) : class.plx.utils.php : formatMenu() : portée css id admin/top.php : li#mnu_nomPageAdminSansPointPhp ou li#mnu_LeNomDuPlugin (@sudwebdesign #0f2d0cc)
[+] [admin sessions] Change le profil de la session utilisateur sans qu'il est a se reconnecter s'il est re-profilé ou le déconnecte s'il est désactivé ou supprimé. Ceci dès sa prochaine action après le réglage d'un admin. (@sudwebdesign #6b40497)
[+] [admin css] thème default : Élargir les bords entre 64 & 128rem + règles css print (1024 & 2048px). (@sudwebdesign #d0b06f6)
[+] [admin media] Indique le nombre Maximum de fichiers téléversable en un seul jet (number of files per upload + langues) (@sudwebdesign #6cbf7aa #f1e49e3 #a78448e)
[+] [admin] Typo L_CONFIG_ADVANCED_USERFOLDERS : ce réglage est destiné qu'aux rédacteurs du site. (@sudwebdesign #3940153)
[+] PluCSS 1.3
[+] Nouveau thème par défaut
[+] Prise en compte du fichier css des plugins sur la page auth.php
[+] Administration : Tri ordre des catégories et des pages statiques par drag&drop
[+] Affichage de l'image d'accroche dans les flux rss
[+] Thème par défaut : entête de page fixe (contribution bazooka07)
[+] Tri alphabétique inversé des articles et catégories  (contribution bazooka07)
[+] Gestionnaire de médias : affichage nombre maxi de fichiers par envoi
[+] #225: Ajout id à la balise <body> de la page auth.php
[+] #230: Image d'accroche dans le premier article créer à l'installation
[+] #239 Test et affichage accès en écriture du dossier racine pour les thèmes
[+] #264 fonction debugJS (contribution bazooka07)
[+] #265 Affichage des archives sur une périodes glissantes de 12 mois (contribution bazooka07)
[+] #266 Tri des pages statiques, catégories et plugins par drag n drop (contribution bazooka07)