@@ -1,6 +1,8 @@
 <?php
 define('PLX_DEBUG', false);
 define('PLX_VERSION', '5.6');
+#define('PLX_PLUGINS', PLX_ROOT.'plugins/');# options demarrage possible
+#define('PLX_MODULES', PLX_CORE.'modules/');# se définissnt dans plxMotor->demarrage()
 
 # Gestion des erreurs PHP
 if(PLX_DEBUG) error_reporting(E_ALL ^ E_NOTICE ^ E_WARNING);
